# Project-Launcher

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  本地项目启动器 (Project Launcher) 产品需求文档 (PRD).md
deliverables/gstack/: pre-launch-check-project-launcher-2026-07-21.md  pre-launch-check-project-launcher-round2-2026-07-22.md  pre-launch-check-project-launcher-round3-2026-07-23.md
src/: App.vue  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: Dashboard.vue  LogPanel.vue  ProjectDetail.vue
src/stores/: project.ts
src/utils/: toast.ts
